# ST-2

./: .gitignore  CMakeLists.txt  README.md
include/: circle.h  tasks.h
src/: CMakeLists.txt  circle.cpp  tasks.cpp
test/: CMakeLists.txt  tests.cpp
